--- a/views/companies/create.handlebars
+++ b/views/companies/create.handlebars
@@ -1,13 +1,15 @@
-<div class="empresa-form-container">
-    <div class="btn-back">
-        <a href="/companies/dashboard">Voltar</a>
-    </div>
-    <h1>Adicionar Empresas</h1>
-    <form action="/companies/add" method="post">
-        <div class="form-control">
-            <label for="title">Empresa</label>
-            <input type="text" name="title" placeholder="Digite o nome da empresa" required>
+<div class="empresas-container">
+    <div class="empresa-form-container">
+        <div class="btn-back">
+            <a href="/companies/dashboard">Voltar</a>
         </div>
-        <input type="submit" value="Adicionar Empresa" class="btn-adicionar">
-    </form>
+        <h1>Adicionar Empresas</h1>
+        <form action="/companies/add" method="post">
+            <div class="form-control">
+                <label for="title">Empresa</label>
+                <input type="text" name="title" placeholder="Digite o nome da empresa" required>
+            </div>
+            <input type="submit" value="Adicionar Empresa" class="btn-adicionar">
+        </form>
+    </div>
 </div>
