--- a/views/companies/all.handlebars
+++ b/views/companies/all.handlebars
@@ -4,7 +4,7 @@
         <ul>
             {{#each companies}}
                 <li>
-                    <a href="/companies/company/{{this.id}}">{{this.title}}</a>
+                    <a href="/companies/company/{{this.id}}"><div class="name-company">{{this.title}}</div></a>
                 </li>
             {{/each}}
         </ul>
